syntax = "proto3";

package com.road.yishi.proto.campaign;

message ArriveAltarReqMsg {
  string uuId = 1;
  int32 nodeId = 2;
}
