syntax = "proto3";

package com.road.yishi.proto.campaign;

message NodeLockReqMsg {
  int32 nodeId = 1;
  bool lock = 2;
  string serverName = 3;
  repeated int32 userIds = 4;
}
